data/derived/comb/progs/unify/prog0778.ml.out
Characters 14-22:
  let _ = ["a"; "a", "b"];;
                ^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
